增强登陆校验

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/mui.min.js"></script>
+	<!--<script src="js/mui.min.js"></script>-->
 	<script src="js/jquery.js"></script>
 	<script src="js/browserify-asch-min.js"></script>
 	<script src="js/sjcl-bip39.js"></script>
