--- a/index.html
+++ b/index.html
@@ -37,18 +37,17 @@
 			</div>
 		</div>
 	</div>
-	<!--<script src="js/mui.min.js"></script>-->
 	<script src="js/jquery.js"></script>
-	<script src="js/browserify-asch-min.js"></script>
-	<script src="js/sjcl-bip39.js"></script>
-        <script src="js/wordlist_english.js"></script>
-        <script src="js/jsbip39.js"></script>
-        <script src="js/i18n.min.js"></script>
-	<script src="js/l10n.min.js"></script>
+	<script src="js/browserify-asch-min.js"></script>//asch.js
+	<script src="js/sjcl-bip39.js"></script>//密钥相关
+        <script src="js/wordlist_english.js"></script>//密钥相关
+        <script src="js/jsbip39.js"></script>//密钥相关
+        <script src="js/i18n.min.js"></script>//翻译相关
+	<script src="js/l10n.min.js"></script>//翻译相关
 	<script src="js/index.js"></script>
-	<script src="js/classie.js"></script>
-	<script src="js/modalEffects.js"></script>
-	<script src="js/clipboard.min.js"></script>
+	<script src="js/classie.js"></script>//弹框相关
+	<script src="js/modalEffects.js"></script>//弹框相关
+	<script src="js/clipboard.min.js"></script>//复制相关
 	<script>
 		var clipboard = new Clipboard('.copy_id');
 		clipboard.on('success', function(e) {
